Fix scenaario page on mobile

--- a/mobile/css/commun.css
+++ b/mobile/css/commun.css
@@ -61,8 +61,6 @@ body{
     background-color: #7f8c8d;
     color : white;
     vertical-align: top;
-    padding : 3px;
-    margin : 3px;
     text-shadow: initial;
 }
 
